--- a/TaskApp/TaskApp/Screens/PendingTasks.xaml
+++ b/TaskApp/TaskApp/Screens/PendingTasks.xaml
@@ -9,7 +9,7 @@
     </NavigationPage.TitleView>
     <ContentPage.Content>
         <StackLayout Margin="0">
-            <ListView Margin="0,10,0,0" x:Name="lstTasks" HasUnevenRows="true"
+            <ListView Margin="0,0,0,0" x:Name="lstTasks" HasUnevenRows="true"
                   IsPullToRefreshEnabled="true"
                   IsRefreshing="True"
                   SelectionMode="None"
@@ -30,7 +30,7 @@
                                     <RowDefinition Height="Auto"/>
                                 </Grid.RowDefinitions>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition />
+                                    <ColumnDefinition Width="3*"/>
                                     <ColumnDefinition />
                                 </Grid.ColumnDefinitions>
                                 <BoxView xct:ShadowEffect.Color="Black"
@@ -40,10 +40,10 @@
                                          BackgroundColor="{StaticResource btnBg}"
                                          >
                                 </BoxView>
-                                <Label Grid.Row="0" Grid.Column="0" Margin="5,0,0,0" TextColor="Black" FontSize="22" FontAttributes="Bold" Text="{Binding Title}"/>
-                                <Label Grid.Row="1" Grid.Column="0" Margin="5,0,0,0" TextColor="Black" FontSize="17" Text="{Binding Description}"/>
+                                <Label Grid.Row="0" Grid.Column="0" Padding="0,0,0,0" Margin="5,0,0,0" FontFamily="Cavea" TextColor="Black" FontSize="22" FontAttributes="Bold" Text="{Binding Title}"/>
+                                <Label Grid.Row="1" Grid.Column="0" Padding="0,0,0,0" Margin="5,0,0,0" TextColor="Black" FontSize="17" Text="{Binding Description}"/>
 
-                                <Label Grid.RowSpan="2" Grid.Column="1" TextColor="Black" Margin="0,0,5,0" FontAttributes="Bold" VerticalOptions="Center" HorizontalOptions="End" Text="{Binding Date}"/>
+                                <Label Grid.RowSpan="2" Grid.Column="1" TextColor="Black" Margin="0,0,0,0" FontAttributes="Bold" VerticalOptions="Center" HorizontalOptions="End" Text="{Binding Date}"/>
                             </Grid>
                         </ViewCell>
                     </DataTemplate>
