--- a/TaskApp/TaskApp/Screens/TaskCompleted.xaml
+++ b/TaskApp/TaskApp/Screens/TaskCompleted.xaml
@@ -8,7 +8,7 @@
         <Label Text="Tareas completas" FontFamily="Cavea" TextColor="White" FontSize="25" HorizontalOptions="Start"/>
     </NavigationPage.TitleView>
     <ContentPage.Content>
-        <StackLayout Margin="0,10,0,0">
+        <StackLayout Margin="0,0,0,0">
             <ListView x:Name="lstTasks" HasUnevenRows="true"
                   IsPullToRefreshEnabled="true"
                   IsRefreshing="False"
@@ -32,8 +32,8 @@
                                             xct:ShadowEffect.Radius="5"  Grid.RowSpan="2" Grid.ColumnSpan="2" BackgroundColor="{StaticResource btnBg}">
 
                                 </BoxView>
-                                <Label Grid.Row="0" Grid.Column="0" Margin="5,0,0,0" FontAttributes="Bold" TextColor="Black" FontSize="22" Text="{Binding Title}"/>
-                                <Label Grid.Row="1" Grid.Column="0" Margin="5,0,0,5" TextColor="Black" FontSize="17" Text="{Binding Description}"/>
+                                <Label Grid.Row="0" Grid.Column="0" Margin="5,0,0,0" FontFamily="Cavea" FontAttributes="Bold" TextColor="Black" FontSize="22" Text="{Binding Title}"/>
+                                <Label Grid.Row="1" Grid.Column="0" Margin="5,0,0,0" TextColor="Black" FontSize="17" Text="{Binding Description}"/>
 
                                 <Label Grid.RowSpan="2" Grid.Column="1" TextColor="Black" Margin="0,0,5,0" FontAttributes="Bold" VerticalOptions="Center" HorizontalOptions="End" Text="{Binding Date}"/>
                             </Grid>
