Mejora de home y add tasks

--- a/TaskApp/TaskApp/App.xaml
+++ b/TaskApp/TaskApp/App.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TaskApp.App">
+             x:Class="TaskApp.App"
+             >
     <Application.Resources>
         <Color x:Key="bg">#C6DCE4</Color>
         <Color x:Key="btnBg">#f2e87f</Color>
