--- a/TaskApp/TaskApp/Screens/AddTask.xaml
+++ b/TaskApp/TaskApp/Screens/AddTask.xaml
@@ -2,13 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:ffsvg="clr-namespace:FFImageLoading.Svg.Forms;assembly=FFImageLoading.Svg.Forms"
-             
-             xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
-             x:Class="TaskApp.Screens.Home"
-             NavigationPage.HasNavigationBar="False"
-             >
-    
-    
+             x:Class="TaskApp.Screens.AddTask"             
+             NavigationPage.HasNavigationBar="False">
     <Grid>
         <Grid.Background>
             <LinearGradientBrush EndPoint="0,1">
@@ -17,8 +12,8 @@
             </LinearGradientBrush>
         </Grid.Background>
         <StackLayout>
-            <Grid RowDefinitions="Auto,Auto" ColumnDefinitions="Auto,*" Margin="0,0,0,30">
-                <Button Text="&#xF0C9;" 
+        <Grid RowDefinitions="Auto,Auto" ColumnDefinitions="Auto,*" Margin="0,0,0,30">
+            <Button Text="&#xF0C9;" 
                     Grid.Row="0"
                     Grid.Column="0"
                     BackgroundColor="Transparent"
@@ -30,21 +25,22 @@
                     WidthRequest="50"
                     HorizontalOptions="Start" 
                     VerticalOptions="Start"/>
-                
-                <Label FontSize="30" Grid.Row="1" Grid.Column="0" Margin="12,0,0,0" TextColor="White" FontFamily="Cavea2"  Text="Bienvenido Sergio"/>
-                
-                <ffsvg:SvgCachedImage Margin="10" 
+
+            <Label FontSize="30" Grid.Row="1" 
+                   Grid.Column="0" Margin="12,0,0,0" 
+                   TextColor="White" FontFamily="Cavea2" 
+                   Text="Trabajo"/>
+
+            <ffsvg:SvgCachedImage Margin="10" 
                                       Grid.RowSpan="2"
                                       Grid.Column="1"
                                       HorizontalOptions="End"                                         
                                 WidthRequest="70"
                                 
                                 Source="logo2.svg"/>
-               
-            </Grid>
 
-
-
+        </Grid>
+        <Grid>
             <ListView Margin="10,0,10,10" x:Name="lstTasks" HasUnevenRows="true"
                   IsPullToRefreshEnabled="true"
                   IsRefreshing="False"
@@ -53,25 +49,23 @@
                   SeparatorColor="Black"
                       
                   >
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
-                            
-                            <Grid RowDefinitions="*,*" ColumnDefinitions="*,*">
-                                
-                                <BoxView xct:ShadowEffect.Color="Black"
-                                            xct:ShadowEffect.OffsetY="7"
-                                            xct:ShadowEffect.Radius="1" 
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+
+                        <Grid RowDefinitions="*,*" ColumnDefinitions="*,*">
+
+                            <Frame 
                                             Margin="0,0,0,5"
                                             Grid.RowSpan="2"
                                             Grid.ColumnSpan="2" CornerRadius="10"                                               
                                          BackgroundColor="{StaticResource btnBg}"
                                          >
-                                </BoxView>
-                                <Label Grid.Row="1" Grid.Column="0" Margin="5,0,0,0" Text="Categoria" 
+                            </Frame>
+                            <Label Grid.Row="1" Grid.Column="0" Margin="5,0,0,0" Text="Categoria" 
                                        FontFamily="Cavea2" FontSize="18" />
-                                <Label Grid.Row="0" Grid.Column="0" Margin="5,0,0,0" FontFamily="Cavea" TextColor="Black" FontSize="30" VerticalOptions="Center" FontAttributes="Bold" Text="{Binding Title}"/>
-                                <Button Grid.RowSpan="2" Grid.Column="1" Text="&#xE830;" 
+                            <Label Grid.Row="0" Grid.Column="0" Margin="5,0,0,0" FontFamily="Cavea" TextColor="Black" FontSize="30" VerticalOptions="Center" FontAttributes="Bold" Text="{Binding Title}"/>
+                            <Button Grid.RowSpan="2" Grid.Column="1" Text="&#xE830;" 
                                         CommandParameter="{Binding IdTarea}" 
                                         Clicked="TermineTask" 
                                         FontSize="35" 
@@ -79,17 +73,38 @@
                                         VerticalOptions="Center" 
                                         BackgroundColor="Transparent" 
                                         TextColor="Black" FontFamily="icons" />
-                            </Grid>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
+                        </Grid>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
 
+        <Grid RowDefinitions="*,*" Padding="10" Margin="10" ColumnDefinitions="3.6*,*" VerticalOptions="End">
             
+            <Frame Grid.RowSpan="2" Grid.ColumnSpan="2" 
+                   BackgroundColor="#497881"
+                   Opacity="0"
+                   CornerRadius="10"
+                   
+                   />
+            <Entry Placeholder="Titulo" Opacity="0" FontSize="25" FontFamily="Cavea2" Grid.Column="0" TextColor="White" PlaceholderColor="White" Margin="10,0,0,0" Grid.Row="0" />
+            <DatePicker Grid.Row="1" Margin="10,0,0,0" 
+                        FontFamily="Cavea2"
+                        FontSize="25"
+                        TextColor="White" Grid.Column="0" 
+                        Opacity="0"/>
+            
+            <Button Text="&#xE828;"
+                    FontFamily="icons" FontSize="45" Grid.RowSpan="2"
+                    VerticalOptions="Center"
+                    
+                    CornerRadius="40"
+                    Padding="0"
+                    TextColor="#497881" BackgroundColor="White" Grid.Column="1" />
+        </Grid>
+       </Grid>
+    </StackLayout>
 
-        </StackLayout>
-        
-       
     </Grid>
-   
+
 </ContentPage>
